# derecho

./: CMakeLists.txt  README.md
applications/archive/: rdma_for_ml.cpp
applications/demos/: simple_replicated_objects.cpp
derecho/: container_template_functions.h  group.h  group_admin.cpp  group_admin.h  group_impl.h  remote_invocable.h  replicated.h  restart_state.cpp  restart_state.h  rpc_manager.cpp  rpc_manager.h  rpc_utils.h  subgroup_functions.cpp  subgroup_functions.h  view_manager.cpp  view_manager.h
include/derecho/cascade/: cascade.hpp  object.hpp
include/derecho/core/: derecho_type_definitions.hpp  group.hpp  register_rpc_functions.hpp  replicated.hpp  subgroup_caller.hpp
include/derecho/objectstore/: ObjectStore.hpp
include/derecho/persistent/: Persistent.hpp
langs/java/: CMakeLists.txt  Manifest.txt
lib/: libderecho.so.0.9  libderecho.so.0.9.2
lib/cmake/derecho/: derechoConfig.cmake  derechoConfigVersion.cmake  derechoTargets-release.cmake
src/applications/archive/: total_restart_test.cpp
src/applications/demos/: dds-cfg.in  dpods-cfg.in  generate-dds-configs.py  (+1 more)
src/cascade/: CMakeLists.txt  object.cpp  sample_cascade_store.cpp
src/conf/: derecho-sample.cfg
src/core/: generate_register_functions.py  git_version.cpp  multicast_group.cpp  p2p_connection.cpp  p2p_connection_manager.cpp  register_rpc_functions.h  rpc_manager.cpp  version_code.cpp  view_manager.cpp
src/objectstore/: .ObjectStore.cpp.swp  Object.cpp  ObjectStore.cpp  performance.cpp  test.cpp
src/persistent/: PersistLog.cpp
src/tcp/: tcp.cpp
(+15 files in other folders)
